# tech-challenge-f2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dvc.yaml  model_card.md  package.json  pyproject.toml
.dvc/: .gitignore  config
reports/: .gitignore
scripts/: validate_env.py
src/configs/: settings.py
src/data/: feature_engine.py  preprocess.py
src/models/: baseline.py  mlp.py  model_factory.py
src/training/: data.py  evaluate.py  metrics.py  mlp_trainer.py  train.py
tests/: test_models.py
