[tool.poetry]
name = "tech-challenge-recsys"
version = "0.1.0"
description = "E-commerce recommendation system"
authors = ["Author <author@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
scikit-learn = "^1.2.0"
mlflow = "^2.3.0"
dvc = "^3.0.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.292"
pre-commit = "^3.5.0"

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
